[package]
name = "editor"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
comemo = "0.5.0"
eframe = "0.33.2"
egui = { version = "0.33.2", features = ["serde"] }
egui_extras = {version = "0.33.2", features = ["svg", "svg_text"]}
typst = "0.14.1"
typst-as-lib = "0.15.0"
typst-library = "0.14.1"
typst-svg = "0.14.1"
