[package]
name = "editor"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
comemo = "0.5.0"
itertools = "0.14.0"
operational-transform = { version = "0.6.1", features = ["serde"] }
serde = "1"
serde_json = "1.0.145"
iced = { version = "0.14.0", features = ["image", "advanced"] }


typst = "0.14.1"
typst-as-lib = "0.15.0"
typst-library = "0.14.1"
typst-svg = "0.14.1"
typst-render = "0.14.2"
